# tt

./: LICENSE  README.md  pyproject.toml  setup.py
src/tt/: __init__.py  core.py  gui.py  tt.py
tests/: core_test.py
