[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tt"
version="0.0.1"
dependencies = [
    "pyglet",
    "imgui[pyglet]",
    "numpy"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.gui-scripts]
tt = "tt:main"